added producer example using HK2 dependency injection in a better way some documentation added kafka client dependency to pom added disruptor dependency back, log4j2 uses it to do async logging

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,16 @@
             <artifactId>cfg4j-core</artifactId>
             <version>${cfg4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.2</version>
+        </dependency>
 
 
         <!-- Optional plug-ins -->
