--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,27 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
             </plugin>
+
+            <!-- User liquibase plugin -->
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.6.2</version>
+                <configuration>
+                    <propertyFile>liquibase/liquibase.properties</propertyFile>
+                    <changeLogFile>liquibase/db-changelog-master.xml</changeLogFile>
+                </configuration>
+                <!--  I personally prefer run  it manually
+                <executions>
+                  <execution>
+                    <phase>process-resources</phase>
+                    <goals>
+                      <goal>update</goal>
+                    </goals>
+                  </execution>
+                </executions>
+                -->
+            </plugin>
         </plugins>
         <resources>
             <resource>
