--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ws.42</groupId>
-    <artifactId>webserver_template</artifactId>
+    <artifactId>webserver_data_init</artifactId>
     <version>0.0.1</version>
 
 
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <log4j2.version>2.11.1</log4j2.version>
         <cfg4j.version>4.4.1</cfg4j.version>
-        <hibernate.filename>hibernate-azure.cfg.xml</hibernate.filename>
+        <hibernate.filename>hibernate.cfg.xml</hibernate.filename>
 
     </properties>
 
@@ -193,6 +193,23 @@
                 <version>3.2.0</version>
                 <configuration>
                     <finalName>app</finalName>
+                    <filters>
+                        <filter>
+                            <!--
+                                Exclude files that sign a jar
+                                (one or multiple of the dependencies).
+                                One may not repack a signed jar without
+                                this, or you will get a
+                                SecurityException at program start.
+                            -->
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                                <exclude>META-INF/*.INF</exclude> <!-- This one may not be required -->
+                            </excludes>
+                        </filter>
+                    </filters>
                 </configuration>
                 <executions>
                     <execution>
